# Cuda_cuFFT_Test

./: .clangd  .gitignore  CMakeLists.txt  CudaTest.cu  CudaTest.sln  README.md
CudaTest/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  CudaTest.h  CudaTest.sln  CudaTest.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  kernel.cu
core_pc/: CMakeLists.txt  SignalProcessor.cu  SignalProcessor.h  UsbLink.cpp  UsbLink.h  main.cpp
edge_esp32/: platformio.ini
edge_esp32/src/: main.cpp
